css fixed z-index

--- a/views/css/styles/default.css
+++ b/views/css/styles/default.css
@@ -10,7 +10,7 @@
  */
 
 
-#cookie-bar {background:#333; height:auto; line-height:24px; color:#eeeeee; text-align:center; padding:3px 0;}
+#cookie-bar {background:#333; height:auto; line-height:24px; color:#eeeeee; text-align:center; padding:3px 0; z-index: 2000}
 #cookie-bar.fixed {position:fixed; top:0; left:0; width:100%;}
 #cookie-bar.fixed.bottom {bottom:0; top:auto;}
 #cookie-bar p {margin:0; padding:0;}
